--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Color Variant Generator</title>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DZ90JSKBYG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DZ90JSKBYG');
+    </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
